Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjBooleanRettext.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, text> yoda
        text ret = yoda:useForce(one, two)
        output "passed"
     end
end
