Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriBooleanRetTextFail.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        boolean two = true
        Yoda<Boolean, boolean, text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
